--- a/style.scss
+++ b/style.scss
@@ -96,3 +96,16 @@
     }
   }
 }
+
+.output {
+  position: relative;
+
+  #block {
+    width: 170px;
+    height: 170px;
+    background-color: red;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
