--- a/up/css/style.css
+++ b/up/css/style.css
@@ -79,4 +79,16 @@
 }
 .menu-block .rgba-container input {
   width: 80px;
+}
+
+.output {
+  position: relative;
+}
+.output #block {
+  width: 170px;
+  height: 170px;
+  background-color: red;
+  position: absolute;
+  left: 0;
+  top: 0;
 }/*# sourceMappingURL=style.css.map */
